fixed: timed out bug on velocity